# dummy_interfaces

./: CMakeLists.txt  README.md  package.xml  rosdep.rosinstall
launch/: launch.launch  main_robot.launch  second_robot.launch
src/: dummy_cart_lin_task_action_server.py  dummy_cart_trap_vel_action_server.py  dummy_joint_trap_vel_action_server.py  dummy_set_robot_tool_service.py  test_dummy_action_servers.py
test/: action_srvs_test.py  actionservers.test  service.test  service_test.py
